working example for adding routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<hello name="{{ name }}"></hello>
+<!-- <head>
+  <base href="/">
+</head> -->
+
+<app-hello name="{{ name }}"></app-hello>
 <button (click)="addAssetDemo()">Add Asset</button>
 <h1>Assets:</h1>
 <div *ngIf="assets">
