--- a/src/app/features/_Shared/AssetTable/assettable.component.html
+++ b/src/app/features/_Shared/AssetTable/assettable.component.html
@@ -1,4 +1,4 @@
-<button class="create" routerLink="/create">Create Asset</button>
+<button class="create" routerLink="/edit/-1">Create Asset</button>
 
 
 <div *ngIf="CurrentAssets == null || CurrentAssets.length == 0">No assets</div>
