--- a/src/app/features/Employee/employee.component.html
+++ b/src/app/features/Employee/employee.component.html
@@ -1,4 +1,4 @@
 <h2>Assets for Employee {{employeeID}}</h2>
-<app-asset-table [forEmployee]="employeeID" [assets]="AllAssets"></app-asset-table>
+<app-asset-table  [assets]="AllAssets"></app-asset-table>
 <button  routerLink="/">Show all Assets</button>
 
