--- a/src/app/features/_Shared/css/button.component.css
+++ b/src/app/features/_Shared/css/button.component.css
@@ -12,3 +12,9 @@ button.create {
     display: inline;
     background-color: #44cc66;
 }
+
+button:disabled {
+    cursor: default;
+    color: lightgrey;
+    background-color: #449933;
+}
