--- a/src/app/features/_Shared/Asset/asset.component.html
+++ b/src/app/features/_Shared/Asset/asset.component.html
@@ -1,8 +1,8 @@
 <div>
-    <div><b>ID: </b>{{CurrentAsset.assetTagId}}</div>
+    <div><b>ID: </b><a routerLink="/details/{{CurrentAsset.assetTagId}}">{{CurrentAsset.assetTagId}}</a></div>
     <div><b>Type: </b> {{CurrentAsset.assetType}}</div>
     <div><b>Description: </b>{{CurrentAsset.description}}</div>
-    <div><b>Assigned To: </b> {{CurrentAsset.assignedTo}}</div>
+    <div><b>Assigned To: </b><a routerLink="/employee/{{CurrentAsset.assignedTo}}">{{CurrentAsset.assignedTo}}</a></div>
     <div><b>Date Added: </b> {{CurrentAsset.dateAdded | date:"MM/dd/yyyy"}}</div>
     <div><b>Is Retired: </b> {{CurrentAsset.retired | yes_no}}</div>
     <div><b>Date Retired: </b> {{CurrentAsset.dateRetired | date:"MM/dd/yyyy"}}</div>
